iter_language/tests/corpus/invalid/queue-pubsub-missing-subscription.iter
queue pubsub {
  project = "p"
  topic   = "t"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}
